--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,63 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
+    color-scheme: light dark;
+    color: #ffffffde;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+    --background-card: #ffffff10;
+    --background-color: #242424;
+    --border-card: 1px solid #232323;
+    --box-shadow-card: 0 0 0 transparent;
+    --text-color: #ffffffde;
 }
 
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
+:root,
+input,
+button {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 body {
-    margin: 0;
     display: flex;
-    place-items: center;
-    min-width: 320px;
+    margin: 0;
     min-height: 100vh;
-}
-
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
-}
-
-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-}
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+    min-width: 320px;
+    place-items: center;
 }
 
 @media (prefers-color-scheme: light) {
     :root {
-        color: #213547;
         background-color: #ffffff;
+        color: #213547;
+        --background-card: #ffffff;
+        --background-color: #ffffff;
+        --border-card: 1px solid #787976;
+        --box-shadow-card: 0 0 0.5em #00000080;
+        --text-color: #213547;
     }
-    a:hover {
-        color: #747bff;
+}
+
+@media (max-width: 768px) {
+    :root {
+        font-size: 8pt;
     }
-    button {
-        background-color: #f9f9f9;
-    }
+}
+
+button {
+    border-radius: 2em;
+    border: none;
+    cursor: pointer;
+    font-size: 1em;
+    padding: 0.5em 1em;
+    transition: all 0.3s ease;
+}
+
+button:hover {
+    filter: brightness(1.2);
 }
