--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -20,11 +20,11 @@
     backdrop-filter: blur(1em);
     background-image: linear-gradient(
             45deg,
-            var(--background-color),
-            #60606040,
-            var(--background-color)
+            var(--background-card),
+            #60606030,
+            var(--background-card)
         ),
-        linear-gradient(to right, #60606050, var(--background-color));
+        linear-gradient(to right, transparent, var(--background-color));
     border-radius: 0.5em;
     display: flex;
     height: 10em;
@@ -44,16 +44,35 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
-    gap: 0.2em;
 }
 
-.h2 {
+.figcaption p {
+    text-align: right;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+    max-height: 3em;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+}
+
+.figcaption h2 {
     margin: 0;
     padding: 0;
-    font-size: 1em;
+    font-size: 1.1em;
+    text-align: right;
 }
 
 .button {
+    background-color: transparent;
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+    font-size: 0.8em;
+}
+
+.button:hover {
     background-color: var(--text-color);
     color: var(--background-color);
 }
@@ -61,6 +80,13 @@
 @media (max-width: 1024px) {
     .figure {
         align-items: center;
+        background-image: linear-gradient(
+                30deg,
+                var(--background-card),
+                #60606030,
+                var(--background-card)
+            ),
+            linear-gradient(to bottom, transparent, var(--background-color));
         flex-direction: column;
         height: auto;
     }
@@ -71,5 +97,20 @@
 
     .figcaption {
         align-items: center;
+        gap: 0.2em;
+        height: 100%;
+    }
+
+    .figcaption p,
+    .figcaption h2 {
+        text-align: center;
+    }
+
+    .figcaption h2 {
+        font-size: 1em;
+    }
+
+    .figcaption button:last-child {
+        margin-top: auto;
     }
 }
