--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
-    margin: 0 auto;
-    max-width: 1280px;
+    display: flex;
+    flex-direction: column;
     padding: 0;
     text-align: center;
+    width: 100%;
+    height: 100vh;
 }
