--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -1,4 +1,5 @@
 .list {
+    box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     gap: 2em;
@@ -6,4 +7,5 @@
     margin: 0em;
     padding: 2em;
     transition: all 0.3s ease;
+    width: 100%;
 }
