--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,16 @@
 
     --background-card: #555;
     --background-color: #242424;
+    --background-color-full: #000;
     --border-card: 1px solid #232323;
     --box-shadow-card: 0 0 0 transparent;
-    --text-color: #ffffffde;
+    --text-color: #ffffff;
 }
 
 :root,
 input,
-button {
+button,
+a {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-weight: 400;
     line-height: 1.5;
@@ -36,6 +38,7 @@ body {
         color: #213547;
         --background-card: #ffffff;
         --background-color: #ffffff;
+        --background-color-full: #ffffff;
         --border-card: 1px solid #787976;
         --box-shadow-card: 0 0 5px #00000050;
         --text-color: #213547;
@@ -48,6 +51,7 @@ body {
     }
 }
 
+a,
 button {
     border-radius: 2em;
     border: none;
@@ -55,8 +59,10 @@ button {
     font-size: 1em;
     padding: 0.2em 1em;
     transition: all 0.1s ease;
+    text-decoration: none;
 }
 
+a:hover,
 button:hover {
     filter: brightness(1.2);
 }
