--- a/src/index.css
+++ b/src/index.css
@@ -53,16 +53,20 @@ body {
 
 a,
 button {
+    background-color: transparent;
     border-radius: 2em;
-    border: none;
+    border: 1px solid var(--text-color);
+    color: var(--text-color);
     cursor: pointer;
-    font-size: 1em;
+    font-size: 0.8em;
     padding: 0.2em 1em;
-    transition: all 0.1s ease;
     text-decoration: none;
+    transition: all 0.1s ease;
 }
 
 a:hover,
 button:hover {
+    background-color: var(--text-color);
+    color: var(--background-color);
     filter: brightness(1.2);
 }
